--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,29 @@ services:
       SCHEMA_REGISTRY_DEBUG: 'true'
       SCHEMA_REGISTRY_KAFKASTORE_TOPIC_REPLICATION_FACTOR: 1
   
+  console:
+    image: docker.redpanda.com/redpandadata/console:v2.8.5
+    container_name: redpanda-console
+    restart: on-failure
+    entrypoint: /bin/sh
+    command: -c "echo \"$$CONSOLE_CONFIG_FILE\" > /tmp/config.yml; /app/console"
+    environment:
+      CONFIG_FILEPATH: /tmp/config.yml
+      CONSOLE_CONFIG_FILE: |
+        kafka:
+          brokers: ["kafka:9092"]
+          schemaRegistry:
+            enabled: true
+            urls:
+              - http://schema-registry:8081
+        connect:
+          enabled: false
+    ports:
+      - "8084:8080"
+    depends_on:
+      - kafka
+      - schema-registry
+  
   data-generator:
     build: ./data-generator
     container_name: data-generator
